--- a/roles/resticker/tasks/main.yml
+++ b/roles/resticker/tasks/main.yml
@@ -40,6 +40,7 @@
             PRE_COMMANDS: |-
               docker exec postgres pg_dump -U postgres paperless > /backup/paperless/paperless.sql
               docker exec postgres pg_dump -U postgres recipes > /backup/recipes/recipes.sql
+              docker exec postgres pg_dump -U postgres nextcloud > /backup/nextcloud/nextcloud.sql
             POST_COMMANDS_SUCCESS: |-
               curl -fsS -m 10 --data-raw "$$(docker logs resticker-backup --since 1h)" https://hc-ping.com/{{ vault_resticker_healthcheck_id }}
             POST_COMMANDS_FAILURE: |-
@@ -51,6 +52,8 @@
           volumes:
             - paperless-ngx_paperless-ngx-app_media:/backup/paperless/media:ro
             - recipes_recipes_mediafiles:/backup/recipes/media:ro
+            - nextcloud_data:/backup/nextcloud/data:ro
+            - nextcloud_config:/backup/nextcloud/config:ro
             - /var/run/docker.sock:/var/run/docker.sock
           logging:
             driver: "json-file"
@@ -95,4 +98,8 @@
         paperless-ngx_paperless-ngx-app_media:
           external: true
         recipes_recipes_mediafiles:
+          external: true
+        nextcloud_config:
+          external: true
+        nextcloud_data:
           external: true
