--- a/roles/nextcloud/tasks/main.yml
+++ b/roles/nextcloud/tasks/main.yml
@@ -16,6 +16,8 @@
       NEXTCLOUD_TRUSTED_DOMAINS: "{{ service_name }}.{{ public_domain }}"
       NEXTCLOUD_ADMIN_USER: admin
       NEXTCLOUD_ADMIN_PASSWORD: "{{ vault_nextcloud_admin_password }}"
+      OVERWRITECLIURL: "{{ service_name }}.{{ public_domain }}"
+      OVERWRITEPROTOCOL: https
     restart_policy: always
     log_driver: json-file
     log_options:
