--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -39,3 +39,6 @@ wireguard_unmanaged_peers:
   laptop15:
     public_key: u7OuQmGFkZ43M7SU9J6nnv/x2Z6gNPJYeLuKwX8GJV0=
     allowed_ips: 10.10.0.4/32
+  ipad:
+    public_key: ZEzpus8c+2+UNO94LWTH+8a+l3zZdiqE+nztYDuBagQ=
+    allowed_ips: 10.10.0.6/32
