--- a/sleepy.yml
+++ b/sleepy.yml
@@ -4,12 +4,13 @@
   hosts: sleepy
 
   roles:
-    # - geerlingguy.pip
-    # - geerlingguy.docker
-    # - traefik
-    # - portainer
-    # - paperless-ngx
-    # - tandoor-recipes
+    - geerlingguy.pip
+    - geerlingguy.docker
+    - traefik
+    - portainer
+    - paperless-ngx
+    - tandoor-recipes
     - nextcloud
-    # - resticker
-    # - bertvv.samba
+    - resticker
+    - bertvv.samba
+    - watchtower
