--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -6,7 +6,7 @@
 - name: Ensure Traefik is running as a container
   community.docker.docker_container:
     name: traefik
-    image: traefik
+    image: traefik:2.9
     ports:
       - "80:80"
       - "443:443"
