Fix add postgres back to sleepy roles

--- a/sleepy.yml
+++ b/sleepy.yml
@@ -8,6 +8,7 @@
     - geerlingguy.docker
     - traefik
     - portainer
+    - postgres
     - paperless-ngx
     - tandoor-recipes
     - nextcloud
