--- a/roles/photoprism/tasks/main.yml
+++ b/roles/photoprism/tasks/main.yml
@@ -47,51 +47,59 @@
       #
       # All commands may have to be prefixed with "sudo" when not running as root.
       # This will point the home directory shortcut ~ to /root in volume mounts.
-
       services:
         photoprism:
           container_name: "{{ service_name }}-app"
           image: photoprism/photoprism:latest
           depends_on:
-            - db
+            - mariadb
           # restart: unless-stopped
           security_opt:
             - seccomp:unconfined
             - apparmor:unconfined
           environment:
-            PHOTOPRISM_ADMIN_PASSWORD: "{{ vault_photoprism_admin_password }}" # !!! PLEASE CHANGE YOUR INITIAL "admin" PASSWORD !!!
-            PHOTOPRISM_SITE_URL: "http://{{ service_name }}.jerry" # public server URL incl http:// or https:// and /path, :port is optional
-            PHOTOPRISM_ORIGINALS_LIMIT: 5000 # file size limit for originals in MB (increase for high-res video)
-            PHOTOPRISM_HTTP_COMPRESSION: "gzip" # improves transfer speed and bandwidth utilization (none or gzip)
-            PHOTOPRISM_DEBUG: "false" # run in debug mode (shows additional log messages)
-            PHOTOPRISM_PUBLIC: "false" # no authentication required (disables password protection)
-            PHOTOPRISM_READONLY: "false" # don't modify originals directory (reduced functionality)
-            PHOTOPRISM_EXPERIMENTAL: "false" # enables experimental features
-            PHOTOPRISM_DISABLE_CHOWN: "false" # disables storage permission updates on startup
-            PHOTOPRISM_DISABLE_WEBDAV: "false" # disables built-in WebDAV server
-            PHOTOPRISM_DISABLE_SETTINGS: "false" # disables Settings in Web UI
-            PHOTOPRISM_DISABLE_TENSORFLOW: "false" # disables all features depending on TensorFlow
-            PHOTOPRISM_DISABLE_FACES: "false" # disables facial recognition
-            PHOTOPRISM_DISABLE_CLASSIFICATION: "false" # disables image classification
-            PHOTOPRISM_DARKTABLE_PRESETS: "false" # enables Darktable presets and disables concurrent RAW conversion
-            PHOTOPRISM_DETECT_NSFW: "false" # flag photos as private that MAY be offensive (requires TensorFlow)
-            PHOTOPRISM_UPLOAD_NSFW: "true" # allows uploads that MAY be offensive
-            PHOTOPRISM_DATABASE_DRIVER: "mysql" # use MariaDB 10.5+ or MySQL 8+ instead of SQLite for improved performance
-            PHOTOPRISM_DATABASE_SERVER: "db:3306" # MariaDB or MySQL database server (hostname:port)
+            PHOTOPRISM_ADMIN_USER: "admin"
+            PHOTOPRISM_ADMIN_PASSWORD: "{{ vault_photoprism_admin_password }}"
+            PHOTOPRISM_AUTH_MODE: "password"               # authentication mode (public, password)
+            PHOTOPRISM_SITE_URL: "https://{{ service_name }}.{{ public_domain }}"   # server URL in the format "http(s)://domain.name(:port)/(path)"
+            PHOTOPRISM_ORIGINALS_LIMIT: 5000               # file size limit for originals in MB (increase for high-res video)
+            PHOTOPRISM_HTTP_COMPRESSION: "gzip"            # improves transfer speed and bandwidth utilization (none or gzip)
+            PHOTOPRISM_LOG_LEVEL: "info"                   # log level: trace, debug, info, warning, error, fatal, or panic
+            PHOTOPRISM_READONLY: "false"                   # do not modify originals directory (reduced functionality)
+            PHOTOPRISM_EXPERIMENTAL: "false"               # enables experimental features
+            PHOTOPRISM_DISABLE_CHOWN: "false"              # disables updating storage permissions via chmod and chown on startup
+            PHOTOPRISM_DISABLE_WEBDAV: "false"             # disables built-in WebDAV server
+            PHOTOPRISM_DISABLE_SETTINGS: "false"           # disables settings UI and API
+            PHOTOPRISM_DISABLE_TENSORFLOW: "false"         # disables all features depending on TensorFlow
+            PHOTOPRISM_DISABLE_FACES: "false"              # disables face detection and recognition (requires TensorFlow)
+            PHOTOPRISM_DISABLE_CLASSIFICATION: "false"     # disables image classification (requires TensorFlow)
+            PHOTOPRISM_DISABLE_RAW: "false"                # disables indexing and conversion of RAW files
+            PHOTOPRISM_RAW_PRESETS: "false"                # enables applying user presets when converting RAW files (reduces performance)
+            PHOTOPRISM_JPEG_QUALITY: 85                    # a higher value increases the quality and file size of JPEG images and thumbnails (25-100)
+            PHOTOPRISM_DETECT_NSFW: "false"                # automatically flags photos as private that MAY be offensive (requires TensorFlow)
+            PHOTOPRISM_UPLOAD_NSFW: "true"                 # allows uploads that MAY be offensive (no effect without TensorFlow)
+            # PHOTOPRISM_DATABASE_DRIVER: "sqlite"         # SQLite is an embedded database that doesn't require a server
+            PHOTOPRISM_DATABASE_DRIVER: "mysql"            # use MariaDB 10.5+ or MySQL 8+ instead of SQLite for improved performance
+            PHOTOPRISM_DATABASE_SERVER: "mariadb:3306"     # MariaDB or MySQL database server (hostname:port)
             PHOTOPRISM_DATABASE_NAME: "{{ service_name }}" # MariaDB or MySQL database schema name
             PHOTOPRISM_DATABASE_USER: "{{ service_name }}" # MariaDB or MySQL database user name
             PHOTOPRISM_DATABASE_PASSWORD: "{{ vault_photoprism_database_password }}" # MariaDB or MySQL database user password
-            PHOTOPRISM_SITE_TITLE: "PhotoPrism"
             PHOTOPRISM_SITE_CAPTION: "AI-Powered Photos App"
-            PHOTOPRISM_SITE_DESCRIPTION: ""
-            PHOTOPRISM_SITE_AUTHOR: ""
+            PHOTOPRISM_SITE_DESCRIPTION: ""                # meta site description
+            PHOTOPRISM_SITE_AUTHOR: ""                     # meta site author
+            ## Run/install on first startup (options: update https gpu tensorflow davfs clitools clean):
+            # PHOTOPRISM_INIT: "https gpu tensorflow"
+            ## Hardware Video Transcoding:
+            # PHOTOPRISM_FFMPEG_ENCODER: "software"        # FFmpeg encoder ("software", "intel", "nvidia", "apple", "raspberry")
+            # PHOTOPRISM_FFMPEG_BITRATE: "32"              # FFmpeg encoding bitrate limit in Mbit/s (default: 50)
+            ## Run as a non-root user after initialization (supported: 0, 33, 50-99, 500-600, and 900-1200):
             PHOTOPRISM_UID: 1000
             PHOTOPRISM_GID: 1000
             PHOTOPRISM_UMASK: 0000
-            HOME: "/photoprism"
+          user: "1000:1000"
           labels:
             - "traefik.enable=true"
-            - "traefik.http.routers.photoprism.rule=Host(`{{ service_name }}.{{ hostname }}`)"
+            - "traefik.http.routers.photoprism.rule=Host(`{{ service_name }}.{{ public_domain }}`)"
             - "traefik.docker.network={{ traefik_network_name }}"
           working_dir: "/photoprism"
           volumes:
@@ -106,22 +114,22 @@
           networks:
             - app
             - traefik
-
-        db:
-          container_name: "{{ service_name }}-db"
+        mariadb:
           restart: unless-stopped
-          image: mariadb:10.6
+          image: mariadb:10.9
           security_opt:
             - seccomp:unconfined
             - apparmor:unconfined
-          command: mysqld --innodb-buffer-pool-size=128M --transaction-isolation=READ-COMMITTED --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --max-connections=512 --innodb-rollback-on-timeout=OFF --innodb-lock-wait-timeout=120
+          command: mysqld --innodb-buffer-pool-size=512M --transaction-isolation=READ-COMMITTED --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --max-connections=512 --innodb-rollback-on-timeout=OFF --innodb-lock-wait-timeout=120
           volumes:
             - "{{ service_name }}-db_data:/var/lib/mysql"
           environment:
-            MYSQL_ROOT_PASSWORD: "{{ vault_photoprism_database_root_password }}"
-            MYSQL_DATABASE: "{{ service_name }}"
-            MYSQL_USER: "{{ service_name }}"
-            MYSQL_PASSWORD: "{{ vault_photoprism_database_password }}"
+            MARIADB_AUTO_UPGRADE: "1"
+            MARIADB_INITDB_SKIP_TZINFO: "1"
+            MARIADB_DATABASE: "{{ service_name }}"
+            MARIADB_USER: "{{ service_name }}"
+            MARIADB_PASSWORD: "{{ vault_photoprism_database_password }}"
+            MARIADB_ROOT_PASSWORD: "{{ vault_photoprism_database_root_password }}"
           logging:
             driver: "json-file"
             options:
