--- a/roles/photoprism/tasks/main.yml
+++ b/roles/photoprism/tasks/main.yml
@@ -47,7 +47,7 @@
       #
       # All commands may have to be prefixed with "sudo" when not running as root.
       # This will point the home directory shortcut ~ to /root in volume mounts.
-      
+
       services:
         photoprism:
           container_name: "{{ service_name }}-app"
@@ -61,43 +61,43 @@
           environment:
             PHOTOPRISM_ADMIN_USER: "admin"
             PHOTOPRISM_ADMIN_PASSWORD: "{{ vault_photoprism_admin_password }}"
-            PHOTOPRISM_AUTH_MODE: "password"               # authentication mode (public, password)
-            PHOTOPRISM_SITE_URL: "https://{{ service_name }}.{{ public_domain }}"   # server URL in the format "http(s)://domain.name(:port)/(path)"
-            PHOTOPRISM_ORIGINALS_LIMIT: 5000               # file size limit for originals in MB (increase for high-res video)
-            PHOTOPRISM_HTTP_COMPRESSION: "gzip"            # improves transfer speed and bandwidth utilization (none or gzip)
-            PHOTOPRISM_LOG_LEVEL: "info"                   # log level: trace, debug, info, warning, error, fatal, or panic
-            PHOTOPRISM_READONLY: "false"                   # do not modify originals directory (reduced functionality)
-            PHOTOPRISM_EXPERIMENTAL: "false"               # enables experimental features
-            PHOTOPRISM_DISABLE_CHOWN: "false"              # disables updating storage permissions via chmod and chown on startup
-            PHOTOPRISM_DISABLE_WEBDAV: "false"             # disables built-in WebDAV server
-            PHOTOPRISM_DISABLE_SETTINGS: "false"           # disables settings UI and API
-            PHOTOPRISM_DISABLE_TENSORFLOW: "false"         # disables all features depending on TensorFlow
-            PHOTOPRISM_DISABLE_FACES: "false"              # disables face detection and recognition (requires TensorFlow)
-            PHOTOPRISM_DISABLE_CLASSIFICATION: "false"     # disables image classification (requires TensorFlow)
-            PHOTOPRISM_DISABLE_RAW: "false"                # disables indexing and conversion of RAW files
-            PHOTOPRISM_RAW_PRESETS: "false"                # enables applying user presets when converting RAW files (reduces performance)
-            PHOTOPRISM_JPEG_QUALITY: 85                    # a higher value increases the quality and file size of JPEG images and thumbnails (25-100)
-            PHOTOPRISM_DETECT_NSFW: "false"                # automatically flags photos as private that MAY be offensive (requires TensorFlow)
-            PHOTOPRISM_UPLOAD_NSFW: "true"                 # allows uploads that MAY be offensive (no effect without TensorFlow)
+            PHOTOPRISM_AUTH_MODE: "password" # authentication mode (public, password)
+            PHOTOPRISM_SITE_URL: "https://{{ service_name }}.{{ public_domain }}" # server URL in the format "http(s)://domain.name(:port)/(path)"
+            PHOTOPRISM_ORIGINALS_LIMIT: 5000 # file size limit for originals in MB (increase for high-res video)
+            PHOTOPRISM_HTTP_COMPRESSION: "gzip" # improves transfer speed and bandwidth utilization (none or gzip)
+            PHOTOPRISM_LOG_LEVEL: "info" # log level: trace, debug, info, warning, error, fatal, or panic
+            PHOTOPRISM_READONLY: "false" # do not modify originals directory (reduced functionality)
+            PHOTOPRISM_EXPERIMENTAL: "false" # enables experimental features
+            PHOTOPRISM_DISABLE_CHOWN: "false" # disables updating storage permissions via chmod and chown on startup
+            PHOTOPRISM_DISABLE_WEBDAV: "false" # disables built-in WebDAV server
+            PHOTOPRISM_DISABLE_SETTINGS: "false" # disables settings UI and API
+            PHOTOPRISM_DISABLE_TENSORFLOW: "false" # disables all features depending on TensorFlow
+            PHOTOPRISM_DISABLE_FACES: "false" # disables face detection and recognition (requires TensorFlow)
+            PHOTOPRISM_DISABLE_CLASSIFICATION: "false" # disables image classification (requires TensorFlow)
+            PHOTOPRISM_DISABLE_RAW: "false" # disables indexing and conversion of RAW files
+            PHOTOPRISM_RAW_PRESETS: "false" # enables applying user presets when converting RAW files (reduces performance)
+            PHOTOPRISM_JPEG_QUALITY: 85 # a higher value increases the quality and file size of JPEG images and thumbnails (25-100)
+            PHOTOPRISM_DETECT_NSFW: "false" # automatically flags photos as private that MAY be offensive (requires TensorFlow)
+            PHOTOPRISM_UPLOAD_NSFW: "true" # allows uploads that MAY be offensive (no effect without TensorFlow)
             # PHOTOPRISM_DATABASE_DRIVER: "sqlite"         # SQLite is an embedded database that doesn't require a server
-            PHOTOPRISM_DATABASE_DRIVER: "mysql"            # use MariaDB 10.5+ or MySQL 8+ instead of SQLite for improved performance
-            PHOTOPRISM_DATABASE_SERVER: "mariadb:3306"     # MariaDB or MySQL database server (hostname:port)
+            PHOTOPRISM_DATABASE_DRIVER: "mysql" # use MariaDB 10.5+ or MySQL 8+ instead of SQLite for improved performance
+            PHOTOPRISM_DATABASE_SERVER: "mariadb:3306" # MariaDB or MySQL database server (hostname:port)
             PHOTOPRISM_DATABASE_NAME: "{{ service_name }}" # MariaDB or MySQL database schema name
             PHOTOPRISM_DATABASE_USER: "{{ service_name }}" # MariaDB or MySQL database user name
             PHOTOPRISM_DATABASE_PASSWORD: "{{ vault_photoprism_database_password }}" # MariaDB or MySQL database user password
             PHOTOPRISM_SITE_CAPTION: "AI-Powered Photos App"
-            PHOTOPRISM_SITE_DESCRIPTION: ""                # meta site description
-            PHOTOPRISM_SITE_AUTHOR: ""                     # meta site author
+            PHOTOPRISM_SITE_DESCRIPTION: "" # meta site description
+            PHOTOPRISM_SITE_AUTHOR: "" # meta site author
             ## Run/install on first startup (options: update https gpu tensorflow davfs clitools clean):
             # PHOTOPRISM_INIT: "https gpu tensorflow"
             ## Hardware Video Transcoding:
             # PHOTOPRISM_FFMPEG_ENCODER: "software"        # FFmpeg encoder ("software", "intel", "nvidia", "apple", "raspberry")
             # PHOTOPRISM_FFMPEG_BITRATE: "32"              # FFmpeg encoding bitrate limit in Mbit/s (default: 50)
             ## Run as a non-root user after initialization (supported: 0, 33, 50-99, 500-600, and 900-1200):
-            PHOTOPRISM_UID: 1000
-            PHOTOPRISM_GID: 1000
-            PHOTOPRISM_UMASK: 0000
-          user: "1000:1000"
+          #   PHOTOPRISM_UID: 1000
+          #   PHOTOPRISM_GID: 1000
+          #   PHOTOPRISM_UMASK: 0000
+          # user: "1000:1000"
           labels:
             - "traefik.enable=true"
             - "traefik.http.routers.photoprism.rule=Host(`{{ service_name }}.{{ public_domain }}`)"
@@ -106,7 +106,7 @@
           volumes:
             - "{{ service_name }}-app_originals:/photoprism/originals" # original media files (photos and videos)
             - "{{ service_name }}-app_storage:/photoprism/storage" # *writable* storage folder for cache, database, and sidecar files (never remove)
-            - "{{ docker_service_conf_dir }}/{{ service_name }}/import:/photoprism/import" # *writable* storage folder for cache, database, and sidecar files (never remove)
+            - "{{ service_name }}-app_import:/photoprism/import" # *writable* storage folder for cache, database, and sidecar files (never remove)
           logging:
             driver: "json-file"
             options:
@@ -117,6 +117,7 @@
             - traefik
 
         mariadb:
+          container_name: "{{ service_name }}-mariadb"
           restart: unless-stopped
           image: mariadb:10.9
           security_opt:
@@ -142,6 +143,7 @@
 
       volumes:
         photoprism-app_storage:
+        photoprism-app_import:
         photoprism-app_originals:
         photoprism-db_data:
 
