--- a/raspberry.yml
+++ b/raspberry.yml
@@ -4,15 +4,10 @@
   hosts: beth
 
   roles:
-    - essentials
-    - geerlingguy.pip
-    - geerlingguy.docker_arm
-    - traefik
-    - portainer
-    - adguard-home
-    - homer
-    - mariadb
-    - uptime-kuma
-    - postgres
-    - tandoor-recipes
-    - monitoring
+    # - essentials
+    # - geerlingguy.pip
+    # - geerlingguy.docker_arm
+    # - traefik
+    # - portainer
+    # - adguard-home
+    - watchtower
