--- a/host_vars/sleepy/main.yml
+++ b/host_vars/sleepy/main.yml
@@ -30,6 +30,9 @@ traefik_args: >
   --certificatesresolvers.letsencrypt.acme.dnschallenge.provider=hetzner
   --certificatesresolvers.letsencrypt.acme.storage=/ssl-certs/acme.json
 
+traefik_env:
+  HETZNER_API_KEY: "{{ vault_hetzner_api_key }}"
+
 traefik_labels:
   traefik.enable: "true"
   traefik.http.routers.catch-all.rule: "PathPrefix(`/`)"
