--- a/host_vars/mrmeeseeks/main.yml
+++ b/host_vars/mrmeeseeks/main.yml
@@ -14,6 +14,9 @@ security_sudoers_passwordless:
 wireguard_address: "10.10.0.5/24"
 wireguard_endpoint: "{{ public_domain }}"
 
+# all docker services
+docker_container_data_root: "/media/SSD/appdata"
+
 # traefik
 traefik_ssl_certs_dir: "/media/SSD/appdata/traefik/certificates"
 traefik_labels:
@@ -24,3 +27,9 @@ traefik_labels:
 # traefik.http.middlewares.redirect-catch-all.redirectregex.replacement: "{{ vault_traefik_base_domain_redirect_target }}"
 # traefik.http.middlewares.redirect-catch-all.redirectregex.permanent: "true"
 
+# filebrowser
+filebrowser_mounts:
+  - /media/Media/Media:/srv/Media
+  - /media/SSD:/srv/SSD
+filebrowser_puid: 1000
+filebrowser_pgid: 100
