Use directory mount instead of file for filebrowser db

--- a/roles/filebrowser/defaults/main.yml
+++ b/roles/filebrowser/defaults/main.yml
@@ -7,5 +7,5 @@ filebrowser_pgid: 1000
 filebrowser_mounts:
 filebrowser_mounts_default:
   - /var/run/docker.sock:/var/run/docker.sock
-  - "{{ docker_container_data_root }}/{{ service_name }}/filebrowser.db:/database/filebrowser.db"
+  - "{{ docker_container_data_root }}/{{ service_name }}/database:/database"
   - "{{ docker_container_data_root }}/{{ service_name }}/settings.json:/config/settings.json"
