--- a/roles/filebrowser/tasks/main.yml
+++ b/roles/filebrowser/tasks/main.yml
@@ -3,15 +3,15 @@
   file:
     path: "{{ docker_container_data_root }}/{{ service_name }}"
     state: directory
-    owner: "{{ filebrowser_puid | int }}"
-    group: "{{ filebrowser_pgid | int }}"
+    owner: "{{ docker_container_puid | int }}"
+    group: "{{ docker_container_pgid | int }}"
 
 - name: "Ensure configuration for {{ service_name }} is present"
   copy:
     src: settings.json
     dest: "{{ docker_container_data_root }}/{{ service_name }}/settings.json"
-    owner: "{{ filebrowser_puid | int }}"
-    group: "{{ filebrowser_pgid | int }}"
+    owner: "{{ docker_container_puid | int }}"
+    group: "{{ docker_container_pgid | int }}"
 
 - name: "Ensure {{ service_name }} is running as a container"
   community.docker.docker_container:
@@ -19,8 +19,8 @@
     image: filebrowser/filebrowser:s6
     volumes: "{{ filebrowser_mounts_default + filebrowser_mounts}}"
     env:
-      PUID: "{{ filebrowser_puid | string }}"
-      PGID: "{{ filebrowser_pgid | string }}"
+      PUID: "{{ docker_container_puid | string }}"
+      PGID: "{{ docker_container_pgid | string }}"
     labels:
       traefik.enable: "true"
       traefik.http.routers.filebrowser.rule: "Host(`filebrowser.{{ public_domain }}`) && {{ traefik_internal_client_ip }}"
