--- a/mrmeeseeks.yml
+++ b/mrmeeseeks.yml
@@ -4,8 +4,10 @@
   become: true
 
   roles:
+    - geerlingguy.pip
     - traefik
     - portainer
     - watchtower
     - filebrowser
     - jdownloader2
+    - nzb
