--- a/host_vars/mrmeeseeks/main.yml
+++ b/host_vars/mrmeeseeks/main.yml
@@ -36,3 +36,8 @@ filebrowser_mounts:
 
 # jdownloader
 jdownloader_download_dir: "/media/SSD/Downloads"
+
+# nzb
+nzb_sabnzbd_complete_dir: "/media/SSD/Downloads/complete"
+nzb_sabnzbd_incomplete_dir: "/media/SSD/Downloads/incomplete"
+nzb_sonarr_tv_dir: "/media/Media/Media/Serien"
