Add jellyfin role

--- a/host_vars/mrmeeseeks/main.yml
+++ b/host_vars/mrmeeseeks/main.yml
@@ -41,3 +41,8 @@ jdownloader_download_dir: "/media/SSD/Downloads"
 nzb_sabnzbd_complete_dir: "/media/SSD/Downloads/complete"
 nzb_sabnzbd_incomplete_dir: "/media/SSD/Downloads/incomplete"
 nzb_sonarr_tv_dir: "/media/Media/Media/Serien"
+
+# jellyfin
+jellyfin_media_mounts:
+  - "/media/Media/Media/Serien:/data/tvshows"
+  - "/media/Media/Media/Filme:/data/movies"
