--- a/roles/nzb/defaults/main.yml
+++ b/roles/nzb/defaults/main.yml
@@ -7,3 +7,6 @@ nzb_sabnzbd_incomplete_dir:
 
 nzb_sonarr_config_dir: "{{ docker_container_data_root }}/sonarr"
 nzb_sonarr_tv_dir:
+
+nzb_radarr_config_dir: "{{ docker_container_data_root }}/radarr"
+nzb_radarr_movie_dir:
