--- a/roles/nzb/tasks/main.yml
+++ b/roles/nzb/tasks/main.yml
@@ -17,7 +17,7 @@
 
       services:
         sabnzbd:
-          container_name: "sabnzbd"
+          container_name: sabnzbd
           image: linuxserver/sabnzbd
           restart: unless-stopped
           volumes:
@@ -38,7 +38,7 @@
             - "traefik.docker.network={{ traefik_network_name }}"
 
         sonarr:
-          container_name: "sonarr"
+          container_name: sonarr
           image: linuxserver/sonarr
           restart: unless-stopped
           volumes:
@@ -56,6 +56,27 @@
             - "traefik.enable=true"
             - "traefik.http.routers.sonarr.rule=Host(`sonarr.{{ public_domain }}`) && {{ traefik_internal_client_ip }}"
             - "traefik.http.services.sonarr.loadbalancer.server.port=8989"
+            - "traefik.docker.network={{ traefik_network_name }}"
+
+        radarr:
+          container_name: radarr
+          image: lscr.io/linuxserver/radarr
+          restart: unless-stopped
+          volumes:
+            - "{{ nzb_radarr_config_dir }}:/config"
+            - "{{ nzb_sabnzbd_complete_dir }}:/downloads"
+            - "{{ nzb_radarr_movie_dir }}:/movies"
+          networks:
+            - nzb
+            - "{{ traefik_network_name }}"
+          environment:
+            TZ: Europe/Berlin
+            PUID: "{{ docker_container_puid }}"
+            PGID: "{{ docker_container_pgid }}"
+          labels:
+            - "traefik.enable=true"
+            - "traefik.http.routers.radarr.rule=Host(`radarr.{{ public_domain }}`) && {{ traefik_internal_client_ip }}"
+            - "traefik.http.services.radarr.loadbalancer.server.port=7878"
             - "traefik.docker.network={{ traefik_network_name }}"
 
       networks:
