--- a/roles/nzb/tasks/main.yml
+++ b/roles/nzb/tasks/main.yml
@@ -79,6 +79,27 @@
             - "traefik.http.services.radarr.loadbalancer.server.port=7878"
             - "traefik.docker.network={{ traefik_network_name }}"
 
+        bazarr:
+          container_name: bazarr
+          image: lscr.io/linuxserver/bazarr
+          restart: unless-stopped
+          volumes:
+            - "{{ nzb_bazarr_config_dir }}:/config"
+            - "{{ nzb_sonarr_tv_dir }}:/storage/TV"
+            - "{{ nzb_radarr_movie_dir }}:/movies"
+          networks:
+            - nzb
+            - "{{ traefik_network_name }}"
+          environment:
+            TZ: Europe/Berlin
+            PUID: "{{ docker_container_puid }}"
+            PGID: "{{ docker_container_pgid }}"
+          labels:
+            - "traefik.enable=true"
+            - "traefik.http.routers.bazarr.rule=Host(`bazarr.{{ public_domain }}`) && {{ traefik_internal_client_ip }}"
+            - "traefik.http.services.bazarr.loadbalancer.server.port=6767"
+            - "traefik.docker.network={{ traefik_network_name }}"
+
       networks:
         nzb:
         traefik:
