--- a/host_vars/mrmeeseeks/main.yml
+++ b/host_vars/mrmeeseeks/main.yml
@@ -21,13 +21,21 @@ docker_container_pgid: 100
 
 # traefik
 traefik_ssl_certs_dir: "/media/SSD/appdata/traefik/certificates"
-traefik_labels:
-# traefik.http.routers.catch-all.rule: "PathPrefix(`/`)"
-# traefik.http.routers.catch-all.priority: "1"
-# traefik.http.routers.catch-all.middlewares: "redirect-catch-all"
-# traefik.http.middlewares.redirect-catch-all.redirectregex.regex: ".*{{ public_domain }}.*"
-# traefik.http.middlewares.redirect-catch-all.redirectregex.replacement: "{{ vault_traefik_base_domain_redirect_target }}"
-# traefik.http.middlewares.redirect-catch-all.redirectregex.permanent: "true"
+traefik_args: >
+  --entrypoints.http.http.redirections.entryPoint.to=https
+  --entrypoints.http.http.redirections.entryPoint.scheme=https
+  --entrypoints.http.http.redirections.entrypoint.permanent=true
+  --entrypoints.https.http.tls.certResolver=letsencrypt
+  --entrypoints.https.http.tls.domains[0].main={{ public_domain }}
+  --entrypoints.https.http.tls.domains[0].sans=*.{{ public_domain }}
+  --certificatesresolvers.letsencrypt.acme.email={{ vault_email }}
+  --certificatesresolvers.letsencrypt.acme.dnschallenge=true
+  --certificatesresolvers.letsencrypt.acme.dnschallenge.resolvers=193.47.99.5:53,213.133.100.98:53
+  --certificatesresolvers.letsencrypt.acme.dnschallenge.delaybeforecheck=10
+  --certificatesresolvers.letsencrypt.acme.dnschallenge.provider=hetzner
+  --certificatesresolvers.letsencrypt.acme.storage=/ssl-certs/acme.json
+traefik_env:
+  HETZNER_API_KEY: "{{ vault_hetzner_api_key }}"
 
 # filebrowser
 filebrowser_mounts:
