--- a/roles/uptime-kuma/tasks/main.yml
+++ b/roles/uptime-kuma/tasks/main.yml
@@ -2,6 +2,7 @@
 - name: "Ensure {{ service_name }} is running as a container"
   community.docker.docker_container:
     name: "{{ service_name }}"
+    restart_policy: unless-stopped
     image: louislam/uptime-kuma
     volumes:
       - "{{ uptime_kuma_data_dir }}:/app/data"
