Update adguard home role

--- a/roles/adguard-home/defaults/main.yml
+++ b/roles/adguard-home/defaults/main.yml
@@ -1,2 +1,14 @@
 ---
-adguard_subdomain: adguard
+service_name: "adguard"
+adguard_config_dir: "{{ docker_container_data_root }}/adguard"
+adguard_rewrites:
+  - domain: "*.{{ vault_sleepy_public_domain }}"
+    answer: "10.10.0.5"
+  - domain: "sleepy"
+    answer: "10.10.0.5"
+  - domain: "*.sleepy"
+    answer: "10.10.0.5"
+  - domain: "{{ vault_public_domain }}"
+    answer: "192.168.178.80"
+  - domain: "*.{{ vault_public_domain }}"
+    answer: "192.168.178.80"
