Move adguard_rewrites to host_vars

--- a/host_vars/mrmeeseeks/main.yml
+++ b/host_vars/mrmeeseeks/main.yml
@@ -55,3 +55,16 @@ nzb_radarr_movie_dir: "/media/Media/Media/Filme"
 jellyfin_media_mounts:
   - "/media/Media/Media/Serien:/data/tvshows"
   - "/media/Media/Media/Filme:/data/movies"
+
+# adguard
+adguard_rewrites:
+  - domain: "*.{{ vault_sleepy_public_domain }}"
+    answer: "10.10.0.5"
+  - domain: "sleepy"
+    answer: "10.10.0.5"
+  - domain: "*.sleepy"
+    answer: "10.10.0.5"
+  - domain: "{{ vault_public_domain }}"
+    answer: "192.168.178.80"
+  - domain: "*.{{ vault_public_domain }}"
+    answer: "192.168.178.80"
