--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -45,3 +45,6 @@ wireguard_unmanaged_peers:
   thinkpad:
     public_key: UelAtkmNY1eTXFAYysV9oDHMXJmYlrFTaVlHOUFbAhE=
     allowed_ips: 10.10.0.4/32
+  work:
+    public_key: Gd60IXyqCxDjOXhylb4oMla6xFCtSFNXyMbCx7zGfkg=
+    allowed_ips: 10.10.0.2/32
