--- a/host_vars/mrmeeseeks/main.yml
+++ b/host_vars/mrmeeseeks/main.yml
@@ -68,3 +68,4 @@ adguard_rewrites:
 # githubixx.ansible_role_wireguard
 wireguard_address: "10.10.0.1/24"
 wireguard_endpoint: "jellyfin.{{ public_domain }}"
+wireguard_allowed_ips: "10.10.0.1/32, 192.168.178.0/24"
