--- a/roles/nzb/tasks/main.yml
+++ b/roles/nzb/tasks/main.yml
@@ -55,6 +55,7 @@
           labels:
             - "traefik.enable=true"
             - "traefik.http.routers.sonarr.rule=Host(`sonarr.{{ public_domain }}`) && {{ traefik_internal_client_ip }}"
+            - "traefik.http.routers.sonarr.middlewares=authelia@docker"
             - "traefik.http.services.sonarr.loadbalancer.server.port=8989"
             - "traefik.docker.network={{ traefik_network_name }}"
 
@@ -76,6 +77,7 @@
           labels:
             - "traefik.enable=true"
             - "traefik.http.routers.radarr.rule=Host(`radarr.{{ public_domain }}`) && {{ traefik_internal_client_ip }}"
+            - "traefik.http.routers.radarr.middlewares=authelia@docker"
             - "traefik.http.services.radarr.loadbalancer.server.port=7878"
             - "traefik.docker.network={{ traefik_network_name }}"
 
@@ -97,6 +99,7 @@
           labels:
             - "traefik.enable=true"
             - "traefik.http.routers.bazarr.rule=Host(`bazarr.{{ public_domain }}`) && {{ traefik_internal_client_ip }}"
+            - "traefik.http.routers.bazarr.middlewares=authelia@docker"
             - "traefik.http.services.bazarr.loadbalancer.server.port=6767"
             - "traefik.docker.network={{ traefik_network_name }}"
 
