--- a/roles/authelia/files/users_database.yml
+++ b/roles/authelia/files/users_database.yml
@@ -10,7 +10,7 @@ users:
   similicious:
     disabled: false
     displayname: "Simon"
-    password: "$6$rounds=50000$BpLnfgDsc2WD8F2q$Zis.ixdg9s/UOJYrs56b5QEZFiZECu0qZVNsIYxBaNJ7ucIL.nlxVCT5tqh8KHG8X4tlwCFm5r6NTOZZ5qRFN/" # yamllint disable-line rule:line-length
+    password: "$argon2id$v=19$m=65536,t=3,p=4$qOFqm8ATMf0t0+FCh+bBuA$pq27a4Dqki4AaZnjKq0Wl7E+Aqbk4XQ+z5oDvoWbnqc" # yamllint disable-line rule:line-length
     email: mail@example.de
     groups:
       - admins
